refactor: Extracted availability check logic to BiFunction and replaced redundant stream operations for workspace availability filtering.
Signed-off-by: TheDev024 <thedeveloper024@gmail.com>